--- a/kMeans/.gitignore
+++ b/kMeans/.gitignore
@@ -1,5 +1,6 @@
 __pycache__/
-Paul_Cézanne,_Still_Life_1890.jpg
-indian_blanket_flower.jpg
-Piet_Mondriaan,_1942_-_New_York_City.jpg
-Komposition-in-Rot-Blau.jpg
+
+images/
+!images/imageColorClusteringExample.png
+
+datasets/
